# transcrever

./: .gitignore  Agent_rules.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  RESOURCES.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/resources/: .gitkeep  test-vad-full  whisper-cli  whisper-quantize
src-tauri/resources/whisper-accelerate/: bench  main  test-vad  whisper-bench  whisper-server  whisper-vad-speech-segments
src-tauri/resources/whisper-portable/: test-vad  test-vad-full  whisper-bench  whisper-cli  whisper-quantize  whisper-server  whisper-vad-speech-segments
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: convert.rs  export_commands.rs  mod.rs  transcribe.rs  validate.rs
src-tauri/src/export/: mod.rs
src-tauri/src/transcription/: mod.rs
src/api/: tauri.ts
src/components/: ActionSection.tsx  AudioPlayer.tsx  AudioUploadSection.tsx  ControlsSection.tsx  ExportSection.tsx  Header.tsx  ModelSelectSection.tsx  StatusSection.tsx  TranscriptSection.tsx  TranscriptSegments.tsx  index.ts
src/constants/: upload.ts
src/utils/: fileValidation.ts  upload.ts
